--- a/index.html
+++ b/index.html
@@ -276,7 +276,9 @@
 
 
 <main class="h-screen overflow-y-auto w-full">
-  <div class="px-6 py-20 w-full lg:w-[580px] mx-auto prose dark:prose-invert h-fit prose-img:mx-auto">
+  <div
+    class="px-6 py-20 w-full lg:w-[580px] mx-auto prose dark:prose-invert h-fit prose-img:mx-auto"
+  >
     <h1 id="hello-">Hello 👋</h1>
 <p><strong>歡迎來到我的網站!</strong></p>
 <p>大家好，我是 Angela ~! 文組商科，目前在高壓高工時的科技業擔任 ODM NPI HW PM，興趣很廣泛，目前業餘學學 Coding。</p>
@@ -290,10 +292,9 @@
 </main>
 
 
-  
+    
+  </div>
 <script type="text/javascript" src="/main.js" defer></script>
 
-
 </body>
-
 </html>
