--- a/stack/index.html
+++ b/stack/index.html
@@ -21,12 +21,12 @@
   <meta property="og:title" content="Stack" />
 <meta property="og:description" content="Tools I use everyday" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://photoang.github.io/stack/" /><meta property="og:image" content="https://photoang.github.io/digital-garden-logo.png" />
+<meta property="og:url" content="https://photoang.github.io/stack/" /><meta property="og:image" content="https://photoang.github.io/angela-site-logo.png" />
 
 
 
   <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:image" content="https://photoang.github.io/digital-garden-logo.png" /><meta name="twitter:title" content="Stack"/>
+<meta name="twitter:image" content="https://photoang.github.io/angela-site-logo.png" /><meta name="twitter:title" content="Stack"/>
 <meta name="twitter:description" content="Tools I use everyday"/>
 
 
