--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
   <meta property="og:title" content="Homepage" />
 <meta property="og:description" content="My Digital Garden on the Internet" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://photoang.github.io/" /><meta property="og:image" content="https://photoang.github.io/digital-garden-logo.png" />
+<meta property="og:url" content="https://photoang.github.io/" /><meta property="og:image" content="https://photoang.github.io/angela-site-logo.png" />
 
 
 
   <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:image" content="https://photoang.github.io/digital-garden-logo.png" /><meta name="twitter:title" content="Homepage"/>
+<meta name="twitter:image" content="https://photoang.github.io/angela-site-logo.png" /><meta name="twitter:title" content="Homepage"/>
 <meta name="twitter:description" content="My Digital Garden on the Internet"/>
 
 
