--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -21,12 +21,12 @@
   <meta property="og:title" content="Portfolio" />
 <meta property="og:description" content="still in processing..." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://photoang.github.io/portfolio/" /><meta property="og:image" content="https://photoang.github.io/digital-garden-logo.png" />
+<meta property="og:url" content="https://photoang.github.io/portfolio/" /><meta property="og:image" content="https://photoang.github.io/angela-site-logo.png" />
 
 
 
   <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:image" content="https://photoang.github.io/digital-garden-logo.png" /><meta name="twitter:title" content="Portfolio"/>
+<meta name="twitter:image" content="https://photoang.github.io/angela-site-logo.png" /><meta name="twitter:title" content="Portfolio"/>
 <meta name="twitter:description" content="still in processing..."/>
 
 
