--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     
     <li>
       <a class="px-2 py-1.5 rounded-md text-sm flex items-center justify-between  hover:bg-slate-200 dark:hover:bg-slate-700 "
-        href="/articles2" >
-        <span>Life</span>
+        href="/diary" >
+        <span>Diary</span>
         
       </a>
     </li>
@@ -289,13 +289,11 @@
     class="px-6 py-20 w-full lg:w-[580px] mx-auto prose dark:prose-invert h-fit prose-img:mx-auto"
   >
     <h1 id="hello-">Hello 👋</h1>
-<p><strong>歡迎來到我的網站!</strong></p>
-<p>大家好，我是 Angela ~! 文組商科，目前在高壓高工時的科技業擔任 ODM NPI HW PM，興趣很廣泛，目前業餘學學 Coding。</p>
+<h2 id="歡迎來到我的網站">歡迎來到我的網站!</h2>
+<p>大家好，我是 Angela ~! 文組商科，目前在高壓高工時的科技業擔任 ODM NPI HW PM，興趣很廣泛，業餘學學 Coding。</p>
 <p>這個網站會紀錄<strong>程式學習</strong>以及其他<strong>生活分享</strong> e.g. PM 生活。</p>
 <p>✉️ 聯繫我：angela81103@gmail.com</p>
 <hr />
-<p><strong>網站歷程</strong></p>
-<p>2024/01 : 網站上線。</p>
 
   </div>
 </main>
