--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </a><a href=https://github.com/ target=_blank rel="noopener noreferrer me" title=Github><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37.0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44.0 0020 4.77 5.07 5.07.0 0019.91 1S18.73.65 16 2.48a13.38 13.38.0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07.0 005 4.77 5.44 5.44.0 003.5 8.55c0 5.42 3.3 6.61 6.44 7A3.37 3.37.0 009 18.13V22"/></svg></a></div></footer></article><article class=post-entry><header class=entry-header><h2 class=entry-hint-parent>日記 很多瑣碎的note</h2></header><div class=entry-content><p>最近老公朋友來訊說公司有個新的開缺，對方看了我的 CV 後說可以幫忙內推，簡單詢問了一下覺得產品未來性可期，薪資幅度成長可期，離家的距離還可以接受，所以決定嘗試新機會看看。
 接下來再分享面試跟後續，希望可以順利，明天去拜拜土地公！
 去做了眼睛雷射，術後目前第四天，痛感跟異物感已經沒有了，但眼睛還是看得很模糊，可以使用電腦的程度．遠看還是不清楚。
-今天早上因為頭太癢鼓起勇繫自己洗了頭，眼睛完全沒碰到一滴水，完成後心情大好。
+今天早上因為頭太癢鼓起勇氣自己洗了頭，眼睛完全沒碰到一滴水，完成後心情大好。
 摯友前幾天來訊說自己得了憂鬱症，一時之間我竟然不知道怎麼回應，平常最樂觀開朗的人，說出好想死的話。我鼓勵她一定要去找諮詢跟看醫生。
 發現之前有追蹤且很喜歡的一個職場人，居然開始出線上課程了。
 月初有收到自己 dream job 的回覆，跟 HR 進行了 phone call 後就收到 thank you letter，本來就預期自己應該不會上．但居然在 phone call 就刷下來了而且還是全中文 call，猶豫自己是否應該寫信詢問 HR。
