--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 跟土地公說希望我的眼睛可以快點好，工作順利些，最後也祈求全家平安健康。
 書 最近在看《納瓦爾寶典》，裡面提到有個觀點令我很印象深刻，就是關於零和遊戲以及正和遊戲，我在想，在工作上爭取升遷是不是一種零和遊戲?
 作者說明追求財富增長是一種正和遊戲，也就是正確的追求財富方式，是將錢投入事業中並且用錢賺錢，這也是我接下來需要好好努力的方向。
+書中說得好幾個觀點都很值得細品，另外還有關於財富的定義就是自由，也就是說，投注時間所換取的財富其實不是好的財富，這點也很值得反思展開深度規劃。
 整理 最近在讓自己刻意喜歡整理這件事，真的好不容易。
 為什麼有些人天生就喜歡整理?
-我努力嘗試將櫃子清空或是排整齊，發現真的有一絲神清氣爽的感覺，但那感覺大概就維持一秒吧，我知道很快這片區域可能又會被灰塵蒙上一筆灰，乾淨和多巴胺一樣都是很短暫的。</p></div><footer class=entry-footer><span title='2025-04-28 00:00:00 +0000 UTC'>April 28, 2025</span>&nbsp;·&nbsp;Yun</footer><a class=entry-link aria-label="post link to 走什麼霉運" href=https://yundaily.com/posts/%E7%94%9F%E6%B4%BB%E9%9A%A8%E7%AD%86/%E8%B5%B0%E4%BB%80%E9%BA%BC%E9%9C%89%E9%81%8B/></a></article><article class=post-entry><header class=entry-header><h2 class=entry-hint-parent>Papermod 架站美化</h2></header><div class=entry-content><p>1. 留言板 我本來是使用 Cusdis，一款不限 Github 用戶就可留言的外掛，但某天 Cusdis 直接 shut down，所以我就轉用 utterances。 介面一樣好看，使用方便，唯一缺點就是只限 Github 用戶留言。
+我努力嘗試將櫃子清空或是排整齊，發現真的有一絲神清氣爽的感覺，但那感覺大概就維持一秒吧，我知道很快這片區域可能又會被灰塵蒙上一筆灰，乾淨和多巴胺一樣都是很短暫的。</p></div><footer class=entry-footer><span title='2025-04-28 00:00:00 +0000 UTC'>April 28, 2025</span>&nbsp;·&nbsp;1 分鐘&nbsp;·&nbsp;Yun</footer><a class=entry-link aria-label="post link to 走什麼霉運" href=https://yundaily.com/posts/%E7%94%9F%E6%B4%BB%E9%9A%A8%E7%AD%86/%E8%B5%B0%E4%BB%80%E9%BA%BC%E9%9C%89%E9%81%8B/></a></article><article class=post-entry><header class=entry-header><h2 class=entry-hint-parent>Papermod 架站美化</h2></header><div class=entry-content><p>1. 留言板 我本來是使用 Cusdis，一款不限 Github 用戶就可留言的外掛，但某天 Cusdis 直接 shut down，所以我就轉用 utterances。 介面一樣好看，使用方便，唯一缺點就是只限 Github 用戶留言。
 使用utterances，copy 代碼後填上自己的 repo，貼在 themes/layouts/partials/comments.html 內即可使用。
 2. 友鏈 參考Aimer’s Blog的 code 架設。
 目前還沒有網友，但這個版型很好看，之後也可以當作放作品集的頁面。
@@ -23,13 +24,13 @@ target="_blank"
 ---
 showToc: true # 顯示目錄
 TocOpen: true # 預設打開目錄
---- 5....</p></div><footer class=entry-footer><span title='2025-04-19 00:00:00 +0000 UTC'>April 19, 2025</span>&nbsp;·&nbsp;Yun</footer><a class=entry-link aria-label="post link to Papermod 架站美化" href=https://yundaily.com/posts/%E6%9E%B6%E7%B6%B2%E7%AB%99/papermod-%E6%9E%B6%E7%AB%99%E7%BE%8E%E5%8C%96/></a></article><article class=post-entry><header class=entry-header><h2 class=entry-hint-parent>回歸Github x Hugo網誌</h2></header><div class=entry-content><p>byebye Wordpress 在架設了 N 個網站之後，本月我還是下定決定跟 Wordpress 說掰掰了，回歸到使用 Github 搭配 Hugo 的組合，釐清自己的文章內容與定位實在很重要，因為我並沒有明確的網站方向以及營利目標，只是單純記錄生活的網誌卻要花費每月 600 多塊的平台費用，對我來說還是覺得太貴。
+--- 5....</p></div><footer class=entry-footer><span title='2025-04-19 00:00:00 +0000 UTC'>April 19, 2025</span>&nbsp;·&nbsp;1 分鐘&nbsp;·&nbsp;Yun</footer><a class=entry-link aria-label="post link to Papermod 架站美化" href=https://yundaily.com/posts/%E6%9E%B6%E7%B6%B2%E7%AB%99/papermod-%E6%9E%B6%E7%AB%99%E7%BE%8E%E5%8C%96/></a></article><article class=post-entry><header class=entry-header><h2 class=entry-hint-parent>回歸Github x Hugo網誌</h2></header><div class=entry-content><p>byebye Wordpress 在架設了 N 個網站之後，本月我還是下定決定跟 Wordpress 說掰掰了，回歸到使用 Github 搭配 Hugo 的組合，釐清自己的文章內容與定位實在很重要，因為我並沒有明確的網站方向以及營利目標，只是單純記錄生活的網誌卻要花費每月 600 多塊的平台費用，對我來說還是覺得太貴。
 同時雖然使用 Cloudways 創建的 Wordpress 網站 SEO 表現很好，但從 Google search console 結果來看我的文章內容確認無法導流（太冷門的內容），因此我含淚跟 Wordpress 說 byebye。
 接納 Hugo 網站的不便 首先因為我是純文科生，使用 Github 架設 Hugo 網站，從架設網站、修改網站 CSS 到寫文章都需要程式底子，沒有直接用 Wordpress 來的方便省時間。
 再來是從之前的測試結果來看，Hugo 網站如果放置太多圖片會非常容易影響網站速度，PageSpeed Insights 檢測出來的網速大幅低於用 Cloudways 架設的網速。
 Hugo 還是有我喜歡的地方 我很喜歡超方便的預覽功能，當然如果是用 WD 這點是輕鬆達成，但在 Hugo 這樣複雜的寫文限制下能直接用 hugo server 預覽上傳後的網頁已經非常方便。
 最大的優點當然是費用便宜，自訂網域每月只需要約台幣 60 塊，即使升級 Github Pro 也只需要每月 180 塊 total 費用，對於非營利網站這價格非常友善。
-從這裡出發記錄我的生活 就從這裡紀錄所有想分享的生活吧!</p></div><footer class=entry-footer><span title='2025-04-13 00:00:00 +0000 UTC'>April 13, 2025</span>&nbsp;·&nbsp;Yun</footer><a class=entry-link aria-label="post link to 回歸Github x Hugo網誌" href=https://yundaily.com/posts/%E6%9E%B6%E7%B6%B2%E7%AB%99/%E5%9B%9E%E6%AD%B8github-hugo%E7%B6%B2%E8%AA%8C/></a></article></main><footer class=footer><span>&copy; 2025 <a href=https://yundaily.com/>Yun's Site</a></span>
+從這裡出發記錄我的生活 就從這裡紀錄所有想分享的生活吧!</p></div><footer class=entry-footer><span title='2025-04-13 00:00:00 +0000 UTC'>April 13, 2025</span>&nbsp;·&nbsp;1 分鐘&nbsp;·&nbsp;Yun</footer><a class=entry-link aria-label="post link to 回歸Github x Hugo網誌" href=https://yundaily.com/posts/%E6%9E%B6%E7%B6%B2%E7%AB%99/%E5%9B%9E%E6%AD%B8github-hugo%E7%B6%B2%E8%AA%8C/></a></article></main><footer class=footer><span>&copy; 2025 <a href=https://yundaily.com/>Yun's Site</a></span>
 <span>Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
         <a href=https://github.com/adityatelange/hugo-PaperMod/ rel=noopener target=_blank>PaperMod</a></span></footer><a href=#top aria-label="go to top" title="Go to Top (Alt + G)" class=top-link id=top-link accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
